修复linux arm64里混了个x64的库的问题

--- a/.github/workflows/linux-arm-build.yaml
+++ b/.github/workflows/linux-arm-build.yaml
@@ -54,9 +54,13 @@ jobs:
         run: |
           flutter pub get
 
+      - name: 🧹 清理构建缓存
+        run: |
+          flutter clean
+
       - name: 🛠️ 构建 Linux ARM64 应用
         run: |
-          flutter build linux --release
+          flutter build linux --release --target-platform linux-arm64
 
       - name: 📦 打包应用
         run: |
